--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url('/konoha.jpeg');
+  background-image: url('./imagenes/konoha.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -15,6 +15,35 @@ body {
 }
 
 
+img {
+  height: 30px;
+  width: 25px;
+}
+
+ul{
+  display: flex;
+  list-style: none;
+}
+
+ul li:nth-of-type(1){
+  background-color: green;
+}
+
+ul li:nth-of-type(2){
+  background-color: red ;
+}
+
+ul li:nth-of-type(3){
+  background-color: grey ;
+}
+
+ul li:nth-of-type(4){
+  background-color: yellow ;
+}
+
+ul li:nth-of-type(5){
+  background-color: saddlebrown;
+}
 
 h1 {
   font-style: italic;
@@ -44,7 +73,7 @@ input {
   border: solid black 1px
 }
 
-button {
+.button-game {
   background-color: blue;
   width: 100px;
   height: 40px;
@@ -75,7 +104,6 @@ td {
   text-align: center;
   font-size: 20px;
 }
-
 
 
 
