--- a/style.css
+++ b/style.css
@@ -15,36 +15,6 @@ body {
 }
 
 
-img {
-  height: 30px;
-  width: 25px;
-}
-
-ul{
-  display: flex;
-  list-style: none;
-}
-
-ul li:nth-of-type(1){
-  background-color: green;
-}
-
-ul li:nth-of-type(2){
-  background-color: red ;
-}
-
-ul li:nth-of-type(3){
-  background-color: grey ;
-}
-
-ul li:nth-of-type(4){
-  background-color: yellow ;
-}
-
-ul li:nth-of-type(5){
-  background-color: saddlebrown;
-}
-
 h1 {
   font-style: italic;
   font-size: 40px;
@@ -79,10 +49,12 @@ input {
   height: 40px;
 }
 
-.errores-us {
-  text-align: center;
-  align-items: center;
-  justify-content: center;
+.filtro {
+  background-color: white;
+  width: 200px;
+  list-style: none;
+  align-items: flex-start;
+  display: none;
 }
 
 table, th, td {
